Add inference url to fine-tuned models
